Fix code block
Prevent code block from overlapping what comes after it.

--- a/internal/theme/static/css/98-pico-override.css
+++ b/internal/theme/static/css/98-pico-override.css
@@ -26,6 +26,10 @@ pre>code {
   padding: 0.25rem 0.5rem !important;
 }
 
+pre {
+  margin-bottom: 1.5rem;
+}
+
 code,
 kbd {
   padding: 0.2rem 0.3rem !important;
